--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,29 @@ img {
   display: block;
   width: 100%;
 }
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem .5rem;
+}
+
+h1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2rem;
+  margin: 0;
+  padding: 0 1rem;
+}
+
+h1 span {
+  font-size: 1.125rem;
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+
+}
