--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ h1 {
   align-items: center;
   font-size: 2rem;
   margin: 0;
-  padding: 0 1rem;
+  padding: 1rem;
 }
 
 h1 span {
@@ -56,7 +56,7 @@ nav ul {
 }
 
 nav li {
-  padding: 0 0.5rem;
+  padding: 0 .5rem;
 }
 
 nav a {
@@ -75,6 +75,10 @@ main img {
   border-bottom: .2rem solid #e2e2e2;
   border-top: .2rem solid #e2e2e2;
   text-align: center;
+}
+
+.intro i {
+  font-size: 2rem;
 }
 
 main {
