--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ footer {
 
   section {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: 1fr;
+    grid-template-rows: 1fr;
   }
 
 }
